@@ -380,20 +380,6 @@ class APIManagerTest(TestSupport):
         response = self.app.get('/get/person/1')
         self.assertEqual(response.status_code, 404)
 
-    def test_session_class(self):
-        """Test for providing a session class instead of a sesssion instance.
-
-        """
-        manager = APIManager(self.flaskapp, session=self.Session)
-        manager.create_api(self.Person, methods=['GET', 'POST'])
-        response = self.app.get('/api/person')
-        self.assertEqual(response.status_code, 200)
-        response = self.app.post('/api/person', data=dumps(dict(name='foo')))
-        self.assertEqual(response.status_code, 201)
-        response = self.app.get('/api/person/1')
-        self.assertEqual(response.status_code, 200)
-        self.assertEqual(loads(response.data)['id'], 1)
-
     def test_max_results_per_page(self):
         """Test for specifying the ``max_results_per_page`` keyword argument.
 
