@@ -13,6 +13,9 @@ Version 0.9.0-dev
 
 Not yet released.
 
+- Removed ability to provide a :class:`~sqlalchemy.orm.session.Session` class
+  when initializing :class:`APIManager`; provide an instance of the class
+  instead.
 - Changes some dynamically loaded relationships used for testing and in
   examples to be many-to-one instead of the incorrect one-to-many. Versions of
   SQLAlchemy after 0.8.0b2 raise an exception when the latter is used.
